--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 .bg-login-image {
-  background-image: url("../img/undraw_rocket.svg");
+  background-image: url("https://dev.mistercheff.com.br/portal/images/logo_mistercheff.png");
   background-size: 50%;
   background-repeat: no-repeat;
 }
